# SmartAirPollutionMonitor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common.h  main.c
FreeRTOS/: CMakeLists.txt  FreeRTOSconfig.h
SAPMS/: ADA746.c  ADA746.h  AM2320.c  AM2320.h  CMakeLists.txt  Debug_print.c  Debug_print.h  PMS5003.c  PMS5003.h  SEN0515.c  SEN0515.h  bapi_I2C0.c  bapi_I2C0.h  common.h
WIFI/: AzureMQTT.c  AzureMQTT.h  CMakeLists.txt  iot_configs.h  lwipopts.h  mbedtls_config.h  process.c  process.h  wifi_mqtt.c  wifi_mqtt.h
libs/: CMakeLists.txt  az_pico.c  azure_iot_config.h
libs/Azure/: CMakeLists.txt
libs/FreeRTOS/: CMakeLists.txt
